--- a/losPollosHermanoMain.css
+++ b/losPollosHermanoMain.css
@@ -6,12 +6,28 @@
 	margin: 0;
 	padding: 0;
 }
-h3 {
+
+html,
+body {
+	width: 100%;
+	overflow-x: hidden;
+}
+
+/* h3 {
 	font-family: 'Goblin One', serif;
 	font-weight: 400;
 	font-style: normal;
 	color: #f20530;
+} */
+
+h3 {
+	font-family: 'Arvo', serif;
+	font-weight: 700;
+	line-height: 1.5;
+	font-style: normal;
+	color: #f20530;
 }
+
 p {
 	font-family: 'Lato', serif;
 	font-weight: 400;
@@ -118,16 +134,25 @@ a {
 }
 .video {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
+	height: 50vh;
 }
+
+/* .circle {
+	background-color: yellow;
+	border-radius: 50%;
+	width: 100%;
+} */
+
 .video img {
-	width: 500px;
+	width: 550px;
 	animation: fadein 2s ease-in forwards;
+	padding: 2rem;
 }
+
 .back-vid {
 	width: 100%;
 	height: 600px;
@@ -141,12 +166,15 @@ a {
 .exploreMenu {
 	height: 100%;
 	padding: 30px;
+	/* background-color: #f2022f; */
+	background-color: #fedc09;
 }
 .Card {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	background-color: #f2e205;
+	/* background-color: #f2e205; */
+	background-color: white;
 	width: 100%;
 	height: 300px;
 	border-radius: 20px;
@@ -165,13 +193,16 @@ a {
 }
 .MenuCardInfo {
 	display: flex;
-	font-size: larger;
+	font-size: 1.3rem;
+	/* font-size: larger; */
 	row-gap: 20px;
 	width: 80%;
 	height: 5%;
 	flex-direction: column;
 	justify-content: center;
+	line-height: 1.5;
 	padding: 2%;
+	color: #333;
 }
 .Card img {
 	height: 300px;
@@ -218,6 +249,12 @@ a {
 	flex-direction: column;
 	gap: 20px;
 }
+
+.Catercard p {
+	font-size: 1.15rem !important;
+	line-height: 1.5;
+	color: #333;
+}
 .Catercard h3 {
 	color: #f20530;
 }
@@ -227,6 +264,17 @@ a {
 /* --------------------------------- End of Cater Section------------------------------------------ */
 .explore2 {
 	padding: 3% 0%;
+	background-color: #67adda;
+}
+
+.explore2 .Card:hover {
+	transform: scale(1.05);
+	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
+	transition: 0.5s;
+}
+
+.explore2 h3 {
+	color: #2a5399;
 }
 .card-containers {
 	display: flex;
@@ -239,6 +287,10 @@ a {
 	flex-direction: column;
 	row-gap: 15px;
 	padding: 3% 5%;
+	color: #333;
+	font-size: 1.12rem;
+	word-spacing: normal;
+	line-height: 1.5;
 }
 .image {
 	overflow: hidden;
@@ -250,9 +302,7 @@ a {
 	left: 20px;
 	height: 385px;
 }
-.Square p {
-	text-align: justify;
-}
+
 .Square {
 	display: flex;
 	overflow: hidden;
@@ -273,6 +323,15 @@ a {
 	overflow: hidden;
 	width: 100%;
 }
+
+#TestimonialSection h3 {
+	font-size: 50px;
+	-webkit-text-stroke-width: 2px;
+	font-weight: 500;
+	color: white;
+	/* -webkit-text-stroke-color: #002a86; */
+}
+
 #TestimonialSection {
 	overflow: hidden;
 
@@ -301,13 +360,40 @@ a {
 	flex-direction: column;
 	row-gap: 50px;
 	padding: 2% 0;
+	padding-left: 1%;
+	padding-right: 1%;
 	font-size: 24px;
 	font-style: italic;
 	min-width: 700px;
 	margin-right: 450px;
 	box-sizing: border-box;
-	color: hsl(0, 0%, 82%);
+	color: black;
+	text-wrap: wrap;
+	background-color: #fddb04;
+	border-radius: 6px;
 }
+
+.Testimonial-Card::before {
+	content: '\201C';
+	font-family: Arial Black, Arial, sans-serif;
+	font-size: 6rem;
+	transform: translate(-1.8rem, -5.5rem);
+	color: #dd052d;
+	position: absolute;
+}
+
+.Testimonial-Card::after {
+	font-family: Arial Black, Arial, sans-serif;
+	font-size: 6rem;
+	position: absolute;
+	content: '\201D';
+	color: #dd052d;
+	transform: translate(41rem, 11rem);
+}
+
+.icon-inner {
+}
+
 .Testimonial-Customer {
 	display: flex;
 	flex-wrap: wrap;
@@ -320,9 +406,18 @@ a {
 	width: 70px;
 	border-radius: 60%;
 }
+
+.Testimonial-Card p {
+	/* width: 80%; */
+	text-align: center;
+	color: #dd052d;
+	font-weight: 700;
+}
+
 .buttons {
 	display: flex;
 	gap: 3%;
+	margin-top: 2%;
 }
 .slide {
 	background-color: transparent;
