--- a/featured.css
+++ b/featured.css
@@ -2,47 +2,42 @@
 /* ------               Universal             ----------*/
 /* ---------------------------------------------------- */
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	overflow-x: hidden;
-	align-items: center;
-	background-color: #f20530;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+}
+
+h1 {
+	font-family: 'Arvo', serif;
+	text-transform: uppercase;
+	font-size: 3rem;
+	place-self: center;
+	margin-bottom: 2%;
+	margin-top: 5%;
 }
 
 html,
 body {
-	position: fixed;
-	height: 100%;
-	width: 100%;
-}
-
-h1 {
-	text-align: center;
-	color: #f2e205;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	font-size: 45px;
-	margin-top: 50px;
-	text-shadow: 3px 3px 3px black;
 	width: 100%;
 	overflow-x: hidden;
+	background-color: #244a93;
 }
 
-h3 {
+h3,
+h1 {
 	font-family: 'Arvo', serif;
 	font-weight: 700;
 	line-height: 1.5;
 	font-style: normal;
-	color: #f20530;
+	color: #f2e205;
+	text-shadow: (0, 0, 0, 0.377);
 }
 
 p {
 	font-family: 'Lato', serif;
 	font-weight: 400;
 	font-style: normal;
+	margin-bottom: 5%;
 }
 a {
 	font-family: 'Lato', serif;
@@ -58,189 +53,54 @@ a {
 	text-align: center;
 }
 
-.Fish {
+.IncomingCard {
 	width: 30%;
 	max-width: 350px;
 	min-width: 280px;
 	height: auto;
 	margin-bottom: 20px;
-	box-shadow: 5px 10px 18px #6c95e7;
-	border-radius: 15px;
+	/* box-shadow: 5px 10px 18px #6c95e7; */
 	background-color: #6c95e7;
+	border-radius: 15px;
 	border: 5px solid #6c95e7;
+	padding-bottom: 2%;
 }
-.Fish img {
+.IncomingCard img {
 	width: 100%;
 	height: 300px;
 	object-fit: cover;
 	border-radius: 15px;
 }
 
-.Fish img:hover {
+.IncomingCard:hover {
+	transform: scale(1.1);
 	transition: 0.4s ease-in-out;
 	cursor: pointer;
-	transform: scale(1.1);
 }
 
-.Fish h3 {
-	color: #f2e205;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	font-size: 30px;
-	text-shadow: 3px 3px 3px black;
-	background-color: #6c95e7;
-}
-
-.Fish p {
-	color: white;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	margin-top: 10px;
-	background-color: #6c95e7;
-	text-shadow: 2px 2px 2px black;
-}
-.OreoMilkshake {
-	width: 30%;
-	max-width: 350px;
-	min-width: 280px;
-	height: auto;
-	margin-bottom: 20px;
-	box-shadow: 5px 10px 18px #6c95e7;
-	border-radius: 15px;
-	border: 5px solid #6c95e7;
-	background-color: #6c95e7;
-}
-.OreoMilkshake img {
-	width: 100%;
-	height: 300px;
-	object-fit: cover;
-
-	border-radius: 15px;
-}
-
-.OreoMilkshake img:hover {
-	transform: scale(1.1);
-	transition: 0.5s ease-in-out;
-	cursor: pointer;
-}
-
-.OreoMilkshake h3 {
-	color: #f2e205;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	font-size: 30px;
-	text-shadow: 3px 3px 3px black;
-	background-color: #6c95e7;
-}
-
-.OreoMilkshake p {
-	color: white;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	margin-top: 10px;
-	background-color: #6c95e7;
-	text-shadow: 2px 2px 2px black;
-}
-
-.SugarCookie {
-	width: 30%;
-	max-width: 350px;
-	min-width: 280px;
-	height: auto;
-	margin-bottom: 20px;
-	box-shadow: 5px 10px 18px #6c95e7;
-	background-color: #6c95e7;
-	border-radius: 15px;
-	border: 5px solid #6c95e7;
-
-.IncomingCard{
-   
-    
-    width: 30%;
-   max-width: 350px;
-   min-width: 280px;
-   height: auto;
-   margin-bottom: 20px;
-    box-shadow: 5px 10px 18px #6c95e7;
-    background-color: #6c95e7;
-    border-radius: 15px;
-    border: 5px solid #6c95e7;
-   
-}
-.SugarCookie img {
-	width: 100%;
-	height: 300px;
-	object-fit: cover;
-	border-radius: 15px;
-.IncomingCard img {
-    width: 100%;
-    height: 300px;
-    
-    border-radius: 15px;
-   
-    
-}
-
-.SugarCookie img:hover {
-	transform: scale(1.1);
-	transition: 0.5s ease-in-out;
-	cursor: pointer;
-.IncomingCard:hover {
-    transform: scale(1.1);
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-   
-
-}
-
-.SugarCookie h3 {
-	color: #f2e205;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-	font-size: 30px;
-	text-shadow: 3px 3px 3px black;
-	background-color: #6c95e7;
 .IncomingCard h3 {
-    color: #F2E205;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px black;
-    background-color: #6c95e7;
-    
-    
+	color: #f2e205;
+	font-family: 'Arvo', 'Arial Narrow', Arial, sans-serif;
+	font-size: 30px;
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.377);
+	background-color: #6c95e7;
 }
 
-.SugarCookie p {
+.IncomingCard p {
 	margin-top: 10px;
 	color: white;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	background-color: #6c95e7;
-	text-shadow: 2px 2px 2px black;
-.IncomingCard p {
-    margin-top: 10px;
-    color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #6c95e7;
-    text-shadow: 2px 2px 2px black;
-    
-   
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.377);
 }
 
-h4 {
+.IncomingCard h4 {
 	color: white;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	background-color: #6c95e7;
 	font-size: 30px;
-	text-shadow: 3px 3px 3px black;
-.IncomingCard h4 {
-    color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #6c95e7;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px black;
+	text-shadow: rgba(0, 0, 0, 0.377);
 }
-
-.OreoImage img {
-	width: 60px;
-	height: 35px;
-	margin-top: 353px;
-	margin-left: 553px;
-	background-color: #6c95e7;
 
 /* -------------------------------------------------------------------------- */
 /*                                Modal pop up                              */
@@ -416,10 +276,6 @@ h4 {
 	color: grey;
 }
 
-.OreoImage {
-	background-color: #6c95e7;
-}
-
 .form-container input {
 	font-size: 1.15rem;
 }
@@ -463,4 +319,10 @@ option:value {
 .Update-Btn:active {
 	/* background-color: #ccbf08; */
 	background-color: #99041f;
+}
+
+/* --------------------------------- Footer --------------------------------- */
+
+footer {
+	margin-top: 10%;
 }
