--- a/MenuPage.css
+++ b/MenuPage.css
@@ -41,10 +41,11 @@ p {
 	font-weight: 400;
 	font-style: normal;
 }
-a {
-	font-family: 'Lato', serif;
+.menu-nav a {
+	font-family: 'Arvo', serif;
 	font-weight: 600;
 	font-style: normal;
+	font-size: 1.2rem;
 }
 /* -------------------------------------------------------------------------- */
 /*                                Sticky header                               */
@@ -71,6 +72,11 @@ a {
 	display: flex;
 	align-items: center;
 	gap: 40px;
+}
+
+.nav a {
+	font-family: 'Lato', serif;
+	font-weight: 600;
 }
 
 .nav a:hover,
@@ -124,6 +130,7 @@ a {
 	padding: 3%;
 	color: rgb(205, 89, 0);
 	font-weight: 900;
+	font-family: 'Lato', serif;
 }
 #Navbtn:hover {
 	color: rgb(205, 89, 0);
